--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,5 +4,5 @@
 	<a class="item">Pathologic Classic HD</a>
 	<a class="item">Pathologic 2</a>
 	<a class="item">Equipo</a>
-	<a class="item" href="/md/Glosario-Pathologic1.md"</a>
+	<a class="item" href="/md/Glosario-Pathologic1.md">GLosario Pathologic I (Classic HD)</a>
 </div>
